--- a/docs/presentation/css/presentation.css
+++ b/docs/presentation/css/presentation.css
@@ -1,3 +1,13 @@
+.content.first h1 {
+    font-size: 700%;
+    text-align: center;
+}
+
+.content.first h2 {
+    font-size: 200%;
+    text-align: center;
+}
+
 .info {
     position: absolute;
     bottom: 0px;
